[package]
name = "proof-systems"
version = "0.3.1"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara",
    "Ulrich Haboeck <ulrich@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>"
]
description = "A library of zk proof systems"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra", features = [ "parallel", "fft"] }
r1cs-core = { path = "../r1cs/core" }
bench-utils = { path = "../bench-utils" }

marlin = { path = "./src/darlin/marlin", optional = true }
poly-commit = { path = "./src/darlin/poly-commit", optional = true }
fiat-shamir = { path = "./src/darlin/fiat-shamir", optional = true }

rand = { version = "=0.8.4" }
rayon = { version = "=1.5.1" }
smallvec = { version = "=1.7.0" }
byteorder = { version = "=1.4.3" }
digest = { version = "=0.8.1", optional = true }
serde = { version = "=1.0.130", features = ["derive"]}
derivative = { version = "=2.2.0", optional = true }

[dev-dependencies]
csv = { version = "=1.1.6" }
criterion = "=0.3.5"
rand_xorshift = { version = "=0.3.0" }
blake2 = { version = "=0.8.1", default-features = false }

algebra = { path = "../algebra", features = ["full"] }
r1cs-std = { path = "../r1cs/gadgets/std" }

[features]
print-trace = [ "bench-utils/print-trace", "marlin/print-trace", "poly-commit/print-trace" ]
darlin = ["marlin", "poly-commit", "fiat-shamir", "digest", "derivative"]
llvm_asm = ["algebra/llvm_asm", "marlin/asm", "poly-commit/asm"]
circuit-friendly = ["marlin/circuit-friendly", "poly-commit/circuit-friendly"]

[[bench]]
name = "darlin_batch_verification_bench"
path = "src/darlin/benches/batch_verification.rs"
harness = false
required-features = [
   "darlin", "llvm_asm",
]

[[bench]]
name = "darlin_batch_verification_detailed_bench"
path = "src/darlin/benches/batch_verification_detailed.rs"
harness = false
required-features = [
    "darlin", "llvm_asm",
]

[[bench]]
name = "darlin_accumulate_verify_bench"
path = "src/darlin/benches/accumulate_verify.rs"
harness = false
required-features = [
   "darlin", "llvm_asm",
]
