[package]
name = "proof-systems"
version = "0.4.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara",
    "Ulrich Haboeck <ulrich@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
    "Luca Giussani <lucagiussani@horizenlabs.io>",
    "Daniele Di Tullio <danieled@horizenlabs.io>",
    "Nicholas Mainardi <nicholas@horizenlabs.io>"
]
description = "A library of zk proof systems"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "refactor_ginger_dev", features = [ "parallel", "fft"] }
r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "refactor_ginger_dev" }
bench-utils = { path = "../bench-utils" }

marlin = { git = "https://github.com/HorizenLabs/marlin", branch = "marlin_refactoring" }
poly-commit = { git = "https://github.com/HorizenLabs/poly-commit", branch = "refactor_ginger_dev" }

r1cs-std = { path = "../r1cs/gadgets/std" }

rand = { version = "=0.8.4" }
rayon = { version = "=1.5.1" }
smallvec = { version = "=1.7.0" }
byteorder = { version = "=1.4.3" }
digest = { version = "=0.8.1" }
serde = { version = "=1.0.130", features = ["derive"]}
derivative = { version = "=2.2.0" }
num-traits = { version = "=0.2.14", default-features = false }

[dev-dependencies]
csv = { version = "=1.1.6" }
criterion = "=0.3.5"
rand_xorshift = { version = "=0.3.0" }
blake2 = { version = "=0.8.1", default-features = false }

algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "refactor_ginger_dev", features = ["tweedle"] }
r1cs-crypto = { path = "../r1cs/gadgets/crypto" }

[features]
print-trace = [ "bench-utils/print-trace", "marlin/print-trace", "poly-commit/print-trace" ]
llvm_asm = ["algebra/llvm_asm", "marlin/asm", "poly-commit/asm"]

[[bench]]
name = "darlin_batch_verification_bench"
path = "src/darlin/benches/batch_verification.rs"
harness = false
required-features = [
   "llvm_asm"
]

[[bench]]
name = "darlin_batch_verification_detailed_bench"
path = "src/darlin/benches/batch_verification_detailed.rs"
harness = false
required-features = [
    "llvm_asm"
]

[[bench]]
name = "darlin_accumulate_verify_bench"
path = "src/darlin/benches/accumulate_verify.rs"
harness = false
required-features = [
   "llvm_asm"
]
