[package]
name = "type-mappings"
version = "0.1.0"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "feat/concrete_instantiations" }
primitives = { features = ["merkle_tree", "signature", "vrf"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "feat/concrete_instantiations" }

lazy_static = "1"
rand = { version = "0.8.4" }
rand_xorshift = { version = "0.3.0" }
blake2s_simd = "0.5"
bit-vec = "0.6.1"