[package]
name = "type-mappings"
version = "0.1.0"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development" }
primitives = { features = ["merkle_tree", "signature", "vrf"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development" }

r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development", optional = true }
proof-systems = { features = ["groth16"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development", optional = true }

lazy_static = "1"
rand = { version = "0.8.4" }
rand_xorshift = { version = "0.3.0" }
blake2s_simd = "0.5"
bit-vec = "0.6.1"

[features]
groth16 = ["proof-systems/groth16", "r1cs-core"]