[package]
name = "type-mappings"
version = "0.1.0"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development" }
primitives = { path = "../primitives", features = ["merkle_tree", "signature", "vrf"] }

r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development", optional = true }
proof-systems = { path = "../proof-systems", features = ["groth16"], optional = true }
marlin = { git = "https://github.com/HorizenLabs/marlin", branch = "dev", optional = true }
poly-commit = { git = "https://github.com/HorizenLabs/poly-commit", branch = "dev", optional = true }

blake2 = { version = "0.8.1", default-features = false, optional = true }

lazy_static = "=1.4.0"
rand = { version = "=0.8.4" }
rand_xorshift = { version = "=0.3.0" }
blake2s_simd = "=0.5.11"
bit-vec = "=0.6.3"

[features]
groth16 = ["proof-systems/groth16", "r1cs-core"]
bn_382 = ["algebra/bn_382", "primitives/bn_382"]
tweedle = ["algebra/tweedle", "primitives/tweedle"]
darlin = ["proof-systems/darlin", "marlin", "poly-commit", "blake2"]