[package]
name = "r1cs-crypto"
version = "0.3.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara",
    "Ulrich Haboeck <ulrich@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>"
]
description = "A crypto library for constraint system gadgets"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "refactor_ginger_dev", features = [ "parallel" ] }
primitives = {path = "../../../primitives"}
r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "refactor_ginger_dev" }
r1cs-std = { path = "../std"}
bench-utils = { path = "../../../bench-utils" }
num-traits = { version = "0.2", default-features = false }

digest = { version = "0.8", optional = true }
blake2 = { version = "0.8.1", optional = true }
ripemd160 = { version = "0.9.1", optional = true }
sha2 = { version = "0.9.5", optional = true }
hex = { version = "0.4", optional = true }

rand = { version = "0.8.4" }
derivative = "2.2.0"
rayon = "1"

[features]
merkle_tree = ["primitives/merkle_tree"]
prf = ["digest", "blake2", "ripemd160", "sha2", "hex", "primitives/prf"]
signature = ["primitives/signature", "digest"]
vrf = ["primitives/vrf"]

# For Poseidon CRH / Merkle Tree
tweedle = ["primitives/tweedle"]

llvm_asm = ["algebra/llvm_asm"]

[dev-dependencies]
rand_xorshift = { version = "0.3.0" }
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "refactor_ginger_dev", features = ["tweedle"] }
r1cs-std = { path = "../std", features = ["tweedle"] }
r1cs-crypto = { path = "../crypto", features = ["tweedle"] }
