[package]
name = "r1cs-std"
version = "0.4.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara",
    "Ulrich Haboeck <ulrich@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
    "Luca Giussani <lucagiussani@horizenlabs.io>",
    "Daniele Di Tullio <danieled@horizenlabs.io>",
    "Nicholas Mainardi <nicholas@horizenlabs.io>"
]
description = "A standard library for constraint system gadgets"
edition = "2018"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../../../algebra" }
r1cs-core = { path = "../../core" }
derivative = "=2.2.0"
radix_trie = "=0.2.1"
rand = { version = "=0.8.4" }
num-traits = { version = "=0.2.14", default-features = false }
num-bigint = { version = "=0.4.3", default-features = false, optional = true }
num-integer = { version = "=0.1.44", default-features = false, optional = true }
hex = "=0.4.3"

[features]
llvm_asm = ["algebra/llvm_asm"]

full = [ "tweedle", "secp256k1", "ed25519" ]

tweedle = [ "algebra/tweedle" ]
secp256k1 = ["algebra/secp256k1"]
ed25519 = ["algebra/ed25519"]

nonnative = ["num-bigint", "num-integer"]

[dev-dependencies]
algebra = { path = "../../../algebra", features = ["parallel"] }
paste = "=1.0.6"
rand = { version = "=0.8.4" }
rand_xorshift = { version = "=0.3.0" }
serial_test = { version = "=0.5.1"}
