[package]
name = "marlin"
version = "0.2.2"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "Daniele Di Benedetto <daniele@horizenlabs.io>",
  "Maksym Vereshchak <phoinic@gmail.com>",
  "Ulrich Haboeck <ulrich@horizenlabs.io>",
  "Luigi Varriale <luigi@horizenlabs.io>",
  "cronicc <cronic@horizenlabs.io>"
]
description = "A library for the Marlin preprocessing zkSNARK"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra = { path = "../../../../algebra", features = ["parallel", "fft", "derive"] }
fiat-shamir = { path = "../fiat-shamir" }
bench-utils = {  path = "../../../../bench-utils" }
r1cs-core = {  path = "../../../../r1cs/core" }
r1cs-std = { path = "../../../../r1cs/gadgets/std", features = ["tweedle"], optional = true }
poly-commit = {path = "../poly-commit" }

rand = "=0.8.4"
rand_core = { version = "=0.6.3" }
rand_chacha = { version = "=0.3.1", default-features = false }
rayon = { version = "=1.5.1" }
digest = { version = "=0.8.1" }
derivative = { version = "=2.2.0", features = ["use_core"] }
num-traits = { version = "=0.2.14", default-features = false }

[dev-dependencies]
algebra = { path = "../../../../algebra", features = ["tweedle", "derive"]}
primitives = { path = "../../../../primitives" }
r1cs-std = { path = "../../../../r1cs/gadgets/std", features = ["tweedle"]}
r1cs-crypto = { path = "../../../../r1cs/gadgets/crypto" }
fiat-shamir = { path = "../fiat-shamir", features = ["tweedle"] }
paste = "=1.0.6"
blake2 = { version = "=0.8.1", default-features = false }
criterion = "=0.3.5"
rand_xorshift = "=0.3.0"
num-traits = { version = "=0.2.14", default-features = false }

[features]
print-trace = [ "bench-utils/print-trace", "poly-commit/print-trace" ]
asm = [ "poly-commit/asm", "algebra/llvm_asm" ]
circuit-friendly = []

[[bench]]
name = "tweedle_test_circuits"
path = "benches/tweedle_test_circuits.rs"
harness = false
required-features = ["asm"]
