[package]
name = "poly-commit"
version = "0.2.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "William Lin",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "Daniele Di Benedetto <daniele@horizenlabs.io>",
  "Maksym Vereshchak <phoinic@gmail.com>",
  "Ulrich Haboeck <ulrich@horizenlabs.io>",
  "Luigi Varriale <luigi@horizenlabs.io>",
  "cronicc <cronic@horizenlabs.io>"
]
description = "A library for constructing polynomial commitment schemes for use in zkSNARKs"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra = { path = "../../../../algebra", features = ["parallel", "fft", "derive", "tweedle"] }
bench-utils = {  path = "../../../../bench-utils" }
primitives = { path = "../../../../primitives" }
r1cs-core = { path = "../../../../r1cs/core"}
r1cs-std = { path = "../../../../r1cs/gadgets/std", features = ["nonnative"]}
r1cs-crypto = { path = "../../../../r1cs/gadgets/crypto", features = ["tweedle"]}

rand = { version = "0.8.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
digest = "0.8"
rayon = { version = "1" }
derivative = { version = "2" }
either = "1.6"

[dev-dependencies]
paste = "=1.0.6"
criterion = "0.3"
rand_xorshift = "0.3.0"
blake2 = { version = "0.8.1", default-features = false }

[features]
asm = [ "algebra/llvm_asm" ]
print-trace = [ "bench-utils/print-trace" ]
circuit-friendly = []

[[bench]]
name = "tweedle_open_proof"
path = "benches/open_proof.rs"
harness = false
required-features = ["asm"]