[package]
name = "poly-commit"
version = "0.2.2"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "William Lin",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "Daniele Di Benedetto <daniele@horizenlabs.io>",
  "Maksym Vereshchak <phoinic@gmail.com>",
  "Ulrich Haboeck <ulrich@horizenlabs.io>",
  "Luigi Varriale <luigi@horizenlabs.io>",
  "cronicc <cronic@horizenlabs.io>"
]
description = "A library for constructing polynomial commitment schemes for use in zkSNARKs"
repository = "https://github.com/HorizenLabs/poly-commit"
keywords = ["cryptography", "polynomial commitments", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra = { path = "../../../../algebra", features = ["parallel", "fft", "derive"] }
bench-utils = {  path = "../../../../bench-utils" }

rand = { version = "=0.8.4", default-features = false }
rand_chacha = { version = "=0.3.1", default-features = false }
rand_core = { version = "=0.6.3", default-features = false }
digest = "=0.8.1"
rayon = { version = "=1.5.1" }
derivative = { version = "=2.2.0" }
num-traits = { version = "=0.2.14", default-features = false }

[dev-dependencies]
algebra = {  path = "../../../../algebra", features = ["tweedle"] }
criterion = "=0.3.5"
rand_xorshift = "=0.3.0"
blake2 = { version = "=0.8.1", default-features = false }

[features]
asm = [ "algebra/llvm_asm" ]
print-trace = [ "bench-utils/print-trace" ]

[[bench]]
name = "tweedle_open_proof"
path = "src/benches/open_proof.rs"
harness = false
required-features = ["asm"]